# src/controllers/content.controller.ts
@@ -1,23 +1,14 @@
 import { Get, Path, Query, Route } from "tsoa";
 import { NotImplemented } from "../models/http.error/index.js";
-import { cmsService } from "../services/cms.service.js";
+import {
+  cmsService,
+  GetPageTreeAsArray,
+  GetPageTreeResponse,
+} from "../services/cms.service.js";
 
 interface ApiResponse<T> {
   status: number;
   body: T;
-}
-
-interface Content {
-  message: number;
-}
-
-interface ContentResponse {
-  message: number;
-}
-
-interface GetPagesTreeResponseBody {
-  tree: any;
-  count: number;
 }
 
 @Route("/content")
@@ -25,19 +16,23 @@ export class ContentController {
   @Get("{id}")
   public async getContent(
     @Path() id: number,
-    @Query("editmode") editmode?: boolean
+    @Query("editmode") editmode?: boolean,
+    @Query() correlationId?: string
   ): Promise<ApiResponse<any>> {
-    console.log("Yo");
-    const content = await cmsService.getContent(id, { editmode });
-    return { status: 200, body: content };
+    const result = await cmsService.getContent(id, { editmode, correlationId });
+    return { status: 200, body: result };
   }
 
   @Get("{id}/children")
   public async getContentChildren(
     @Path() id: number,
-    @Query() editmode?: boolean
+    @Query() editmode?: boolean,
+    @Query() correlationId?: string
   ): Promise<ApiResponse<any[]>> {
-    const content = await cmsService.getContentChildren(id, { editmode });
+    const content = await cmsService.getContentChildren(id, {
+      editmode,
+      correlationId,
+    });
     return { status: 200, body: content };
   }
 
@@ -53,21 +48,38 @@ export class ContentController {
     @Path() id: number,
     @Query() editmode?: boolean,
     @Query() correlationId?: string
-  ): Promise<ApiResponse<any>> {
-    const content = await cmsService.getPageTree(id, {
+  ): Promise<ApiResponse<GetPageTreeResponse>> {
+    const result = await cmsService.getPageTree(id, {
       editmode,
       correlationId,
     });
     return {
-      status: !!content.data && content.children.length > 0 ? 200 : 404,
-      body: content,
+      status: result.count > 0 ? 200 : 404,
+      body: result,
+    };
+  }
+
+  @Get("/pages/{id}/array")
+  public async getPageTreeAsArray(
+    @Path() id: number,
+    @Query() editmode?: boolean,
+    @Query() correlationId?: string
+  ): Promise<ApiResponse<GetPageTreeAsArray>> {
+    const result = await cmsService.getPageTreeAsArray(id, {
+      editmode,
+      correlationId,
+    });
+    return {
+      status: result.count > 0 ? 200 : 404,
+      body: result,
     };
   }
 
   @Get("/pages/{id}")
   public async getPage(
     @Path() id: number,
-    @Query() editmode?: boolean
+    @Query() editmode?: boolean,
+    @Query() correlationId?: string
   ): Promise<any> {
     throw new NotImplemented();
   }
@@ -75,14 +87,15 @@ export class ContentController {
   @Get("/pages/{id}/children")
   public async getPageChildren(
     @Path() id: number,
-    @Query() editmode?: boolean
+    @Query() editmode?: boolean,
+    @Query() correlationId?: string
   ): Promise<any> {
     throw new NotImplemented();
   }
 
   @Get("sites")
   public async getWebsites(): Promise<any> {
-    const content = await cmsService.getWebsites();
-    return { status: 200, body: content };
+    const result = await cmsService.getWebsites();
+    return { status: 200, body: result };
   }
 }
